--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.11.0",
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.1",
+    "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
     "maath": "^0.10.0",
     "react": "^18.2.0",
